// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HorizontalLikedContentFeed renders a HorizontalLikedContentFeed 1`] = `
<View
  horizontal={false}
  style={
    Object {
      "paddingHorizontal": 0,
      "paddingVertical": 16,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingHorizontal": 16,
        "zIndex": 2,
      }
    }
  >
    <View>
      <Text
        secondary={true}
        style={
          Object {
            "color": "rgba(39, 39, 46, 0.6)",
            "fontFamily": "InterUI-Bold",
            "fontSize": 16,
            "lineHeight": 24,
          }
        }
      >
        Liked Content
      </Text>
    </View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "flex-end",
            "padding": 16,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "rgba(39, 39, 46, 0.6)",
              "fontFamily": "InterUI-Bold",
              "fontSize": 12,
              "lineHeight": 18,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#17B582",
              }
            }
          >
            View All
          </Text>
        </Text>
      </View>
    </View>
  </View>
  <RCTScrollView
    collapsable={false}
    contentContainerStyle={
      Object {
        "padding": 8,
        "paddingBottom": 0,
      }
    }
    data={
      Array [
        Object {
          "__typename": "UniversalContentItem",
          "coverImage": Object {
            "sources": Array [
              Object {
                "uri": "https://apollosrock.newspring.cc/GetImage.ashx?guid=55be1fd5-d8eb-43a6-aa70-f8e27bb63d31",
              },
            ],
          },
          "id": "UniversalContentItem:4148aeb9482181025e9cad42826e676a",
          "sharing": Object {
            "message": "",
            "title": "Making Prayer a Spiritual Habit",
            "url": "https://apollosrock.newspring.cc/",
          },
          "title": "Making Prayer a Spiritual Habit",
        },
        Object {
          "__typename": "UniversalContentItem",
          "coverImage": Object {
            "sources": Array [
              Object {
                "uri": "https://apollosrock.newspring.cc/GetImage.ashx?guid=993efb47-47ec-4dec-a3d3-47bcacfbd58e",
              },
            ],
          },
          "id": "UniversalContentItem:9dbdc4e565dcaa3c9b17eb5ae42de96e",
          "sharing": Object {
            "message": "",
            "title": "Vacations and Your Budget",
            "url": "https://apollosrock.newspring.cc/",
          },
          "title": "Vacations and Your Budget",
        },
      ]
    }
    decelerationRate="fast"
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={true}
    initialNumToRender={10}
    initialScrollIndex={0}
    keyExtractor={[Function]}
    loadingStateObject={
      Object {
        "coverImage": Array [],
        "id": "fake_id",
        "title": "",
      }
    }
    maxToRenderPerBatch={10}
    onContentSizeChange={[Function]}
    onEndReachedThreshold={2}
    onGestureHandlerEvent={[Function]}
    onGestureHandlerStateChange={[Function]}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    refreshing={false}
    removeClippedSubviews={false}
    renderItem={[Function]}
    renderScrollComponent={[Function]}
    scrollEventThrottle={50}
    showsHorizontalScrollIndicator={false}
    snapToAlignment="start"
    snapToInterval={256}
    stickyHeaderIndices={Array []}
    style={
      Object {
        "marginTop": -20,
        "zIndex": 1,
      }
    }
    updateCellsBatchingPeriod={50}
    viewabilityConfigCallbackPairs={Array []}
    windowSize={21}
  >
    <View>
      <View
        onLayout={[Function]}
        style={
          Array [
            Object {
              "flexDirection": "row",
            },
            null,
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "transform": Array [
                Object {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <View
            inHorizontalList={true}
            isLoading={true}
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "borderRadius": 16,
                "height": 240,
                "margin": 8,
                "marginBottom": 12,
                "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
                "shadowOffset": Object {
                  "height": 2,
                  "width": 0,
                },
                "shadowOpacity": 1,
                "shadowRadius": 8,
                "width": 240,
              }
            }
          >
            <View
              style={
                Object {
                  "borderRadius": 16,
                  "overflow": "hidden",
                }
              }
            >
              <View
                style={
                  Object {
                    "backgroundColor": "rgb(249, 249, 251)",
                    "bottom": 0,
                    "flex": 1,
                    "height": "100%",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              >
                <Image
                  blurRadius={80}
                  fadeDuration={250}
                  onLoad={[Function]}
                  source={Array []}
                  style={
                    Object {
                      "backgroundColor": "#A5A5A5",
                      "bottom": 0,
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    }
                  }
                />
                <View
                  material="regular"
                  style={
                    Object {
                      "backgroundColor": "rgba(242, 242, 247, 0.8)",
                      "bottom": 0,
                      "flex": 1,
                      "height": "100%",
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    }
                  }
                />
              </View>
              <Image
                fadeDuration={250}
                hasTitleAndSummary={false}
                height={135}
                isLoading={true}
                onLoad={[Function]}
                source={Array []}
                style={
                  Object {
                    "aspectRatio": 1.7777777777777777,
                    "backgroundColor": "#A5A5A5",
                    "width": "100%",
                  }
                }
                width={240}
              />
              <View
                style={
                  Object {
                    "height": 105,
                    "justifyContent": "center",
                  }
                }
              >
                <View
                  style={
                    Object {
                      "paddingHorizontal": 16,
                      "paddingVertical": 16,
                      "width": "100%",
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "alignSelf": "stretch",
                        "backgroundColor": "#A5A5A5",
                        "borderRadius": 16,
                        "height": 16,
                        "marginVertical": 4,
                        "width": "80%",
                      }
                    }
                  />
                  <View
                    style={
                      Object {
                        "alignSelf": "stretch",
                        "backgroundColor": "#A5A5A5",
                        "borderRadius": 16,
                        "height": 12,
                        "marginVertical": 3,
                        "width": "100%",
                      }
                    }
                  />
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={
          Array [
            Object {
              "flexDirection": "row",
            },
            null,
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "transform": Array [
                Object {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <View
            inHorizontalList={true}
            isLoading={true}
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "borderRadius": 16,
                "height": 240,
                "margin": 8,
                "marginBottom": 12,
                "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
                "shadowOffset": Object {
                  "height": 2,
                  "width": 0,
                },
                "shadowOpacity": 1,
                "shadowRadius": 8,
                "width": 240,
              }
            }
          >
            <View
              style={
                Object {
                  "borderRadius": 16,
                  "overflow": "hidden",
                }
              }
            >
              <View
                style={
                  Object {
                    "backgroundColor": "rgb(249, 249, 251)",
                    "bottom": 0,
                    "flex": 1,
                    "height": "100%",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              >
                <Image
                  blurRadius={80}
                  fadeDuration={250}
                  onLoad={[Function]}
                  source={Array []}
                  style={
                    Object {
                      "backgroundColor": "#A5A5A5",
                      "bottom": 0,
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    }
                  }
                />
                <View
                  material="regular"
                  style={
                    Object {
                      "backgroundColor": "rgba(242, 242, 247, 0.8)",
                      "bottom": 0,
                      "flex": 1,
                      "height": "100%",
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    }
                  }
                />
              </View>
              <Image
                fadeDuration={250}
                hasTitleAndSummary={false}
                height={135}
                isLoading={true}
                onLoad={[Function]}
                source={Array []}
                style={
                  Object {
                    "aspectRatio": 1.7777777777777777,
                    "backgroundColor": "#A5A5A5",
                    "width": "100%",
                  }
                }
                width={240}
              />
              <View
                style={
                  Object {
                    "height": 105,
                    "justifyContent": "center",
                  }
                }
              >
                <View
                  style={
                    Object {
                      "paddingHorizontal": 16,
                      "paddingVertical": 16,
                      "width": "100%",
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "alignSelf": "stretch",
                        "backgroundColor": "#A5A5A5",
                        "borderRadius": 16,
                        "height": 16,
                        "marginVertical": 4,
                        "width": "80%",
                      }
                    }
                  />
                  <View
                    style={
                      Object {
                        "alignSelf": "stretch",
                        "backgroundColor": "#A5A5A5",
                        "borderRadius": 16,
                        "height": 12,
                        "marginVertical": 3,
                        "width": "100%",
                      }
                    }
                  />
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`HorizontalLikedContentFeed renders a loading state 1`] = `
<View
  horizontal={false}
  style={
    Object {
      "paddingHorizontal": 0,
      "paddingVertical": 16,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingHorizontal": 16,
        "zIndex": 2,
      }
    }
  >
    <View>
      <Text
        secondary={true}
        style={
          Object {
            "color": "rgba(39, 39, 46, 0.6)",
            "fontFamily": "InterUI-Bold",
            "fontSize": 16,
            "lineHeight": 24,
          }
        }
      >
        Liked Content
      </Text>
    </View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "flex-end",
            "padding": 16,
          }
        }
      >
        <View
          style={
            Object {
              "alignSelf": "stretch",
              "backgroundColor": "#A5A5A5",
              "borderRadius": 16,
              "height": 12,
              "marginVertical": 3,
              "width": "50%",
            }
          }
        />
      </View>
    </View>
  </View>
  <RCTScrollView
    collapsable={false}
    contentContainerStyle={
      Object {
        "padding": 8,
        "paddingBottom": 0,
      }
    }
    data={
      Array [
        Object {
          "coverImage": Object {
            "sources": Array [
              Object {
                "uri": "https://apollosrock.newspring.cc/GetImage.ashx?guid=55be1fd5-d8eb-43a6-aa70-f8e27bb63d31",
              },
            ],
          },
          "id": "UniversalContentItem:4148aeb9482181025e9cad42826e676a",
          "sharing": Object {
            "message": "",
            "title": "Making Prayer a Spiritual Habit",
            "url": "https://apollosrock.newspring.cc/",
          },
          "title": "Making Prayer a Spiritual Habit",
        },
        Object {
          "coverImage": Object {
            "sources": Array [
              Object {
                "uri": "https://apollosrock.newspring.cc/GetImage.ashx?guid=993efb47-47ec-4dec-a3d3-47bcacfbd58e",
              },
            ],
          },
          "id": "UniversalContentItem:9dbdc4e565dcaa3c9b17eb5ae42de96e",
          "sharing": Object {
            "message": "",
            "title": "Vacations and Your Budget",
            "url": "https://apollosrock.newspring.cc/",
          },
          "title": "Vacations and Your Budget",
        },
      ]
    }
    decelerationRate="fast"
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={true}
    initialNumToRender={10}
    initialScrollIndex={0}
    keyExtractor={[Function]}
    loadingStateObject={
      Object {
        "coverImage": Array [],
        "id": "fake_id",
        "title": "",
      }
    }
    maxToRenderPerBatch={10}
    onContentSizeChange={[Function]}
    onEndReachedThreshold={2}
    onGestureHandlerEvent={[Function]}
    onGestureHandlerStateChange={[Function]}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    refreshing={true}
    removeClippedSubviews={false}
    renderItem={[Function]}
    renderScrollComponent={[Function]}
    scrollEventThrottle={50}
    showsHorizontalScrollIndicator={false}
    snapToAlignment="start"
    snapToInterval={256}
    stickyHeaderIndices={Array []}
    style={
      Object {
        "marginTop": -20,
        "zIndex": 1,
      }
    }
    updateCellsBatchingPeriod={50}
    viewabilityConfigCallbackPairs={Array []}
    windowSize={21}
  >
    <View>
      <View
        onLayout={[Function]}
        style={
          Array [
            Object {
              "flexDirection": "row",
            },
            null,
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "transform": Array [
                Object {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <View
            inHorizontalList={true}
            isLoading={true}
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "borderRadius": 16,
                "height": 240,
                "margin": 8,
                "marginBottom": 12,
                "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
                "shadowOffset": Object {
                  "height": 2,
                  "width": 0,
                },
                "shadowOpacity": 1,
                "shadowRadius": 8,
                "width": 240,
              }
            }
          >
            <View
              style={
                Object {
                  "borderRadius": 16,
                  "overflow": "hidden",
                }
              }
            >
              <View
                style={
                  Object {
                    "backgroundColor": "rgb(249, 249, 251)",
                    "bottom": 0,
                    "flex": 1,
                    "height": "100%",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              >
                <Image
                  blurRadius={80}
                  fadeDuration={250}
                  onLoad={[Function]}
                  source={Array []}
                  style={
                    Object {
                      "backgroundColor": "#A5A5A5",
                      "bottom": 0,
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    }
                  }
                />
                <View
                  material="regular"
                  style={
                    Object {
                      "backgroundColor": "rgba(242, 242, 247, 0.8)",
                      "bottom": 0,
                      "flex": 1,
                      "height": "100%",
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    }
                  }
                />
              </View>
              <Image
                fadeDuration={250}
                hasTitleAndSummary={false}
                height={135}
                isLoading={true}
                onLoad={[Function]}
                source={Array []}
                style={
                  Object {
                    "aspectRatio": 1.7777777777777777,
                    "backgroundColor": "#A5A5A5",
                    "width": "100%",
                  }
                }
                width={240}
              />
              <View
                style={
                  Object {
                    "height": 105,
                    "justifyContent": "center",
                  }
                }
              >
                <View
                  style={
                    Object {
                      "paddingHorizontal": 16,
                      "paddingVertical": 16,
                      "width": "100%",
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "alignSelf": "stretch",
                        "backgroundColor": "#A5A5A5",
                        "borderRadius": 16,
                        "height": 16,
                        "marginVertical": 4,
                        "width": "80%",
                      }
                    }
                  />
                  <View
                    style={
                      Object {
                        "alignSelf": "stretch",
                        "backgroundColor": "#A5A5A5",
                        "borderRadius": 16,
                        "height": 12,
                        "marginVertical": 3,
                        "width": "100%",
                      }
                    }
                  />
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={
          Array [
            Object {
              "flexDirection": "row",
            },
            null,
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "transform": Array [
                Object {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <View
            inHorizontalList={true}
            isLoading={true}
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "borderRadius": 16,
                "height": 240,
                "margin": 8,
                "marginBottom": 12,
                "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
                "shadowOffset": Object {
                  "height": 2,
                  "width": 0,
                },
                "shadowOpacity": 1,
                "shadowRadius": 8,
                "width": 240,
              }
            }
          >
            <View
              style={
                Object {
                  "borderRadius": 16,
                  "overflow": "hidden",
                }
              }
            >
              <View
                style={
                  Object {
                    "backgroundColor": "rgb(249, 249, 251)",
                    "bottom": 0,
                    "flex": 1,
                    "height": "100%",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              >
                <Image
                  blurRadius={80}
                  fadeDuration={250}
                  onLoad={[Function]}
                  source={Array []}
                  style={
                    Object {
                      "backgroundColor": "#A5A5A5",
                      "bottom": 0,
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    }
                  }
                />
                <View
                  material="regular"
                  style={
                    Object {
                      "backgroundColor": "rgba(242, 242, 247, 0.8)",
                      "bottom": 0,
                      "flex": 1,
                      "height": "100%",
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    }
                  }
                />
              </View>
              <Image
                fadeDuration={250}
                hasTitleAndSummary={false}
                height={135}
                isLoading={true}
                onLoad={[Function]}
                source={Array []}
                style={
                  Object {
                    "aspectRatio": 1.7777777777777777,
                    "backgroundColor": "#A5A5A5",
                    "width": "100%",
                  }
                }
                width={240}
              />
              <View
                style={
                  Object {
                    "height": 105,
                    "justifyContent": "center",
                  }
                }
              >
                <View
                  style={
                    Object {
                      "paddingHorizontal": 16,
                      "paddingVertical": 16,
                      "width": "100%",
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "alignSelf": "stretch",
                        "backgroundColor": "#A5A5A5",
                        "borderRadius": 16,
                        "height": 16,
                        "marginVertical": 4,
                        "width": "80%",
                      }
                    }
                  />
                  <View
                    style={
                      Object {
                        "alignSelf": "stretch",
                        "backgroundColor": "#A5A5A5",
                        "borderRadius": 16,
                        "height": 12,
                        "marginVertical": 3,
                        "width": "100%",
                      }
                    }
                  />
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;
